--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Welcome to Jekyll!
+ to # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog.
 #
@@ -6,9 +6,9 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Harry's Fast AI blog
+description: In this blog I will post about my learnings throughout the Fast AI course
+github_username: Haza46
 
 # Email and twitter are optional:
 email:
